deployment/services/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dengue-frontend
  labels:
    app: dengue-frontend
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: dengue-frontend
