deployment/services/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dengue-frontend
  labels:
    app: dengue-frontend
spec:
  to:
    kind: Service
    name: dengue-frontend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
